Finalizando CSS sobre nosotros

--- a/index.html
+++ b/index.html
@@ -79,5 +79,19 @@
         </div>
       </div>
     </section>
+
+    <section class="sobre-tech">
+      <div class="contenedor sobre-tech-grid">
+        <div class="texto-sobre-tech">
+          <p>Sobre los <span>TechPro</span></p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam
+            numquam adipisci nobis sed deserunt. Quam distinctio quas laudantium
+            perferendis ab ratione quod aut earum officia, atque quia, eveniet
+            illum placeat!
+          </p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
