--- a/index.html
+++ b/index.html
@@ -115,5 +115,32 @@
         </div>
       </div>
     </main>
+
+    <section class="newsletter">
+      <div class="contenido-newsletter contenedor">
+        <div class="texto-newsletter">
+          <h2>Recibe Actualizaciones</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia sed
+            natus fugit eius tenetur sapiente debitis assumenda vel nostrum?
+            Ratione distinctio incidunt eum corrupti iste voluptatibus minus
+            sequi perspiciatis optio.
+          </p>
+
+          <form class="formulario">
+            <div class="input">
+              <input type="text" placeholder="Tu Email" />
+            </div>
+            <input type="submit" value="Inscribirme" />
+          </form>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <p>Todos los derechos reservados</p>
+    </footer>
+
+    <script src="js/imagenes.js"></script>
   </body>
 </html>
